[gd_scene load_steps=19 format=2]

[ext_resource path="res://Metronome/Scripts/metronome_core.gd" type="Script" id=1]
[ext_resource path="res://Metronome/Scripts/metronome_api.gd" type="Script" id=2]
[ext_resource path="res://Metronome/Assets/Icons/note.png" type="Texture" id=3]
[ext_resource path="res://Metronome/Assets/Icons/clock.png" type="Texture" id=4]
[ext_resource path="res://Metronome/Assets/Icons/metronome.png" type="Texture" id=5]
[ext_resource path="res://Metronome/Assets/Icons/volume.png" type="Texture" id=6]
[ext_resource path="res://Metronome/Assets/Icons/stop.png" type="Texture" id=7]
[ext_resource path="res://Metronome/Assets/metronome_01.wav" type="AudioStream" id=8]
[ext_resource path="res://Metronome/Assets/Icons/play.png" type="Texture" id=9]
[ext_resource path="res://Metronome/Scripts/metronome_signals.gd" type="Script" id=10]
[ext_resource path="res://Metronome/Scripts/metronome_inputs.gd" type="Script" id=11]
[ext_resource path="res://Metronome/Assets/Icons/warning.png" type="Texture" id=12]
[ext_resource path="res://Metronome/Assets/Icons/pause.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="InputEventKey" id=2]
scancode = 1

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventKey" id=4]
scancode = 39

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Metronome_UI" type="Control"]
margin_right = 760.0
margin_bottom = 40.0
rect_min_size = Vector2( 740, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.227451, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 8.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerTempo" type="HBoxContainer" parent="Main"]
margin_right = 104.0
margin_bottom = 26.0
custom_constants/separation = 10

[node name="IconTempo" type="TextureRect" parent="Main/ContainerTempo"]
margin_right = 10.0
margin_bottom = 26.0
rect_min_size = Vector2( 10, 10 )
hint_tooltip = "Tempo display : [ 1/1, 1/4, 1/16, 1/128 ]"
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="LabelTempo" type="Label" parent="Main/ContainerTempo"]
margin_left = 20.0
margin_top = 6.0
margin_right = 104.0
margin_bottom = 20.0
text = "1 . 1 . 1 . 120"

[node name="sep_01" type="VSeparator" parent="Main"]
margin_left = 114.0
margin_right = 134.0
margin_bottom = 26.0
custom_constants/separation = 20

[node name="ContainerTime" type="HBoxContainer" parent="Main"]
margin_left = 144.0
margin_right = 244.0
margin_bottom = 26.0
custom_constants/separation = 10

[node name="IconTime" type="TextureRect" parent="Main/ContainerTime"]
margin_right = 10.0
margin_bottom = 26.0
rect_min_size = Vector2( 10, 10 )
hint_tooltip = "Time duration : [Minutes, Seconds, Subdivisions]"
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="LabelTime" type="Label" parent="Main/ContainerTime"]
margin_left = 20.0
margin_top = 6.0
margin_right = 100.0
margin_bottom = 20.0
text = "00 : 02 : 125"

[node name="sep_02" type="VSeparator" parent="Main"]
margin_left = 254.0
margin_right = 274.0
margin_bottom = 26.0
custom_constants/separation = 20

[node name="ContainerSignature" type="HBoxContainer" parent="Main"]
margin_left = 284.0
margin_right = 386.0
margin_bottom = 26.0
custom_constants/separation = 10

[node name="IconSignature" type="TextureRect" parent="Main/ContainerSignature"]
margin_right = 10.0
margin_bottom = 26.0
rect_min_size = Vector2( 10, 10 )
hint_tooltip = "Time Signature : BPM - Bar / Beat"
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="TextEditBPM" type="TextEdit" parent="Main/ContainerSignature"]
margin_left = 20.0
margin_right = 56.0
margin_bottom = 26.0
rect_min_size = Vector2( 36, 20 )
custom_styles/normal = SubResource( 1 )
text = "120"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditSignature" type="TextEdit" parent="Main/ContainerSignature"]
margin_left = 66.0
margin_right = 102.0
margin_bottom = 26.0
rect_min_size = Vector2( 36, 20 )
custom_styles/normal = SubResource( 1 )
text = "4/4"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconWarning" type="TextureRect" parent="Main/ContainerSignature"]
visible = false
margin_left = 112.0
margin_right = 126.0
margin_bottom = 24.0
rect_min_size = Vector2( 14, 14 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="sep_03" type="VSeparator" parent="Main"]
margin_left = 396.0
margin_right = 416.0
margin_bottom = 26.0
custom_constants/separation = 20

[node name="ContainerSound" type="HBoxContainer" parent="Main"]
margin_left = 426.0
margin_right = 603.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconSound" type="TextureRect" parent="Main/ContainerSound"]
margin_right = 10.0
margin_bottom = 26.0
rect_min_size = Vector2( 10, 10 )
hint_tooltip = "Enable Metronome Clic on : [Measure, Beats, Sixteenths]"
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="CheckBoxSoundMeasure" type="CheckBox" parent="Main/ContainerSound"]
margin_left = 14.0
margin_right = 63.0
margin_bottom = 26.0
pressed = true
text = "1/1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxSoundQuart" type="CheckBox" parent="Main/ContainerSound"]
margin_left = 67.0
margin_right = 116.0
margin_bottom = 26.0
pressed = true
text = "1/4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxSoundSixteen" type="CheckBox" parent="Main/ContainerSound"]
margin_left = 120.0
margin_right = 177.0
margin_bottom = 26.0
text = "1/16"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sep_04" type="VSeparator" parent="Main"]
margin_left = 613.0
margin_right = 633.0
margin_bottom = 26.0
custom_constants/separation = 20

[node name="ContainerControls" type="HBoxContainer" parent="Main"]
margin_left = 643.0
margin_right = 685.0
margin_bottom = 26.0

[node name="ButtonStop" type="Button" parent="Main/ContainerControls"]
modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 26.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 26 )
hint_tooltip = "Stop Metronome"
shortcut = SubResource( 3 )
icon = ExtResource( 7 )
flat = true
expand_icon = true

[node name="ButtonPlay" type="TextureButton" parent="Main/ContainerControls"]
margin_left = 30.0
margin_right = 42.0
margin_bottom = 26.0
rect_min_size = Vector2( 12, 12 )
hint_tooltip = "Play / Pause Metronome"
toggle_mode = true
shortcut = SubResource( 5 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="MetronomeClic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Scripts" type="Node" parent="."]

[node name="Signals" type="Node" parent="Scripts"]
script = ExtResource( 10 )

[node name="Inputs" type="Node" parent="Scripts"]
script = ExtResource( 11 )

[node name="API" type="Node" parent="Scripts"]
script = ExtResource( 2 )

[node name="Core" type="Node" parent="Scripts"]
script = ExtResource( 1 )
[connection signal="gui_input" from="Main/ContainerSignature/TextEditBPM" to="Scripts/Signals" method="_on_TextEditBPM_gui_input"]
[connection signal="text_changed" from="Main/ContainerSignature/TextEditBPM" to="Scripts/Signals" method="_on_TextEditBPM_text_changed"]
[connection signal="gui_input" from="Main/ContainerSignature/TextEditSignature" to="Scripts/Signals" method="_on_TextEditBeat_gui_input"]
[connection signal="text_changed" from="Main/ContainerSignature/TextEditSignature" to="Scripts/Signals" method="_on_TextEditSignature_text_changed"]
[connection signal="toggled" from="Main/ContainerSound/CheckBoxSoundMeasure" to="Scripts/Signals" method="_on_CheckBoxSoundMeasure_toggled"]
[connection signal="toggled" from="Main/ContainerSound/CheckBoxSoundQuart" to="Scripts/Signals" method="_on_CheckBoxSoundQuart_toggled"]
[connection signal="toggled" from="Main/ContainerSound/CheckBoxSoundSixteen" to="Scripts/Signals" method="_on_CheckBoxSoundSixteen_toggled"]
[connection signal="mouse_entered" from="Main/ContainerControls/ButtonStop" to="Scripts/Signals" method="_on_ButtonStop_mouse_entered"]
[connection signal="mouse_exited" from="Main/ContainerControls/ButtonStop" to="Scripts/Signals" method="_on_ButtonStop_mouse_exited"]
[connection signal="pressed" from="Main/ContainerControls/ButtonStop" to="Scripts/Signals" method="_on_ButtonStop_pressed"]
[connection signal="mouse_entered" from="Main/ContainerControls/ButtonPlay" to="Scripts/Signals" method="_on_ButtonPlay_mouse_entered"]
[connection signal="mouse_exited" from="Main/ContainerControls/ButtonPlay" to="Scripts/Signals" method="_on_ButtonPlay_mouse_exited"]
[connection signal="toggled" from="Main/ContainerControls/ButtonPlay" to="Scripts/Signals" method="_on_ButtonPlay_toggled"]
